Add aria-label to link

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="An online pharmacy offering a wide range of medicines, vitamins, and health products. Easy search, fast delivery, and affordable prices ensure a convenient and safe shopping experience." />
+    <meta
+      name="keywords"
+      content="online pharmacy, medicines, health products, vitamins, pharmacy supplies, buy medicines online, medicine delivery, health care" />
     <link rel="icon" type="image/svg" href="/public/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Pharmacy</title>
